# devapps

./: build.gradle.kts  jitpack.yml  settings.gradle.kts
app/: build.gradle.kts
app/src/androidTest/java/in/daydreamers/pluginapp/: ExampleInstrumentedTest.java
app/src/test/java/in/daydreamers/pluginapp/: ExampleUnitTest.java
devapps/: build.gradle.kts  google-services.json  proguard-rules.pro
devapps/src/androidTest/java/in/daydreamers/devapps/: ExampleInstrumentedTest.java
devapps/src/main/: AndroidManifest.xml
devapps/src/main/cpp/: CMakeLists.txt  native-lib.cpp
devapps/src/main/java/in/daydreamers/devapps/: DAnalyticsHelper.java  DevAppsTime.java  UpdateWorker.java
devapps/src/main/java/in/daydreamers/devappsanalytics/: DAnalyticsHelper.java  DevAppsTime.java  UpdateWorker.java
devapps/src/test/java/in/daydreamers/devapps/: ExampleUnitTest.java
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
